# medrankgpt-site

./: .fuse_hidden0000000200000001  .~lock.estrategia-100-paginas-medrankgpt.xlsx#  DESIGN.md  LOCAL-EXPANSION-PLAN.md  build_plan.py  estrategia-100-paginas-medrankgpt.backup-20260628-1147.xlsx  estrategia-100-paginas-medrankgpt.xlsx  index.html  inteligencia-competitiva-e-gtm.md  llms.txt  preview.html  pyproject.toml  robots.txt  sitemap.xml
.claude/: launch.json
.gstack/: browse-audit.jsonl  browse.json
academy/: index.html
cfm/: index.html
comparativos/: index.html
condicoes/: index.html
content/: README.md
especialidades/: index.html
guia/: index.html
indice/: index.html  styles.css
listas/: index.html
local/: index.html
procedimentos/: index.html
processo/: index.html
studies/: derive_insights.py  indice-medrank-2026.json
tests/: test_ai_engines.py  test_assembler.py  test_cli.py  test_clients.py  test_collectors_base.py  test_competitors.py  test_config.py  test_google_maps.py  test_google_search.py  test_medical_platforms.py  test_models.py  test_names.py  test_scoring.py  test_site_analysis.py  test_smoke.py  test_study_aggregate.py  test_study_aio.py  test_study_classify.py  test_study_cli.py  test_study_config.py  test_study_cost.py  test_study_demand.py  test_study_export.py  test_study_roster.py  test_study_serp.py  test_study_serp_classify.py  test_study_serper.py  test_study_smoke.py  test_study_supply.py  test_validation.py
visibility/: README.md  assembler.py  cli.py  clients.py  competitors.py  config.py  models.py  (+3 more)
(+303 files in other folders)
