[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "medrank-visibility"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "extruct>=0.16",
  "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21"]

[project.scripts]
medrank-visibility = "visibility.cli:main"

[tool.setuptools]
packages = ["visibility"]

[tool.pytest.ini_options]
testpaths = ["tests"]
